c/examples/writing-a-c-compiler-tests/tests/chapter_18/invalid_types/invalid_struct_declaration/duplicate_struct_declaration.c
int main(void) {
    // can't declare two structures with the same tag
    // in the same scope
    struct x {
        int x;
    };
    struct x {
        int y;
    };
    return 0;
}